--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
-.App {
-  text-align: center;
+*{
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+.container{
+    padding: 3% 6%;
+  
+}
+ /* to-doList style orders */
+.list{
+    border: 2px solid black;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    height: 500px;
+    width: 800px;
+    margin:5rem auto;
+    padding: 3% 7%;
+    gap:2rem;
+}
+.formsection{
+    padding: 0% 25%;
+
+}
+.formsection input[type=text]{
+    background-color: white;
+    font-size:18px;
+    width: 25rem;
+    height: 4rem;
+}
+.formsection button{
+    background-color: #435249;
+    border-color: transparent;
+    color: white;
+    margin-left: 1rem;
+    width: 10rem;
+    height: 4rem;
+}
+.section{
+    border-style: solid;
+    border-width: 2px;
+    border-color: rgba(122, 127, 151, 0.8);
+    width: 300px;
+}
+.pendingsection{
+    background-color: #adc2ed;
+    
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.donesection{
+    background-color: #7ff593 ;
+    color: white;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ /* last child components ->two sibling components */
+.minicontainer{
+    width: auto;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    padding: 2% 7%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.minicontainer p span{
+    font-weight: 900;
 }
-
-.App-link {
-  color: #61dafb;
+.minicontainer p{
+    display: inline-block;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-style: italic;
+    margin-right: 1rem;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.minicontainer button{
+    border-radius: 10%;
+    font-size: 10px;
+    border-color: transparent;
+    margin-right: 0.5rem;
+    display: inline-block; 
 }
